src/snapshots/tests__cube_sharp_after_1_iteration_of_loop_subdivision.snap
---
source: src/mesh_smoothing.rs
expression: "&subdivided_geometry"
---
{
  "faces": [
    {
      "Triangle": {
        "vertices": [
          0,
          8,
          10
        ],
        "normals": [
          0,
          0,
          0
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          1,
          9,
          8
        ],
        "normals": [
          1,
          1,
          1
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          2,
          10,
          9
        ],
        "normals": [
          2,
          2,
          2
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          8,
          9,
          10
        ],
        "normals": [
          3,
          3,
          3
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          2,
          11,
          10
        ],
        "normals": [
          4,
          4,
          4
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          3,
          12,
          11
        ],
        "normals": [
          5,
          5,
          5
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          0,
          10,
          12
        ],
        "normals": [
          6,
          6,
          6
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          11,
          12,
          10
        ],
        "normals": [
          7,
          7,
          7
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          4,
          13,
          15
        ],
        "normals": [
          8,
          8,
          8
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          5,
          14,
          13
        ],
        "normals": [
          9,
          9,
          9
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          6,
          15,
          14
        ],
        "normals": [
          10,
          10,
          10
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          13,
          14,
          15
        ],
        "normals": [
          11,
          11,
          11
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          6,
          16,
          15
        ],
        "normals": [
          12,
          12,
          12
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          7,
          17,
          16
        ],
        "normals": [
          13,
          13,
          13
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          4,
          15,
          17
        ],
        "normals": [
          14,
          14,
          14
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          16,
          17,
          15
        ],
        "normals": [
          15,
          15,
          15
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          7,
          16,
          19
        ],
        "normals": [
          16,
          16,
          16
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          6,
          18,
          16
        ],
        "normals": [
          17,
          17,
          17
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          1,
          19,
          18
        ],
        "normals": [
          18,
          18,
          18
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          16,
          18,
          19
        ],
        "normals": [
          19,
          19,
          19
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          2,
          9,
          20
        ],
        "normals": [
          20,
          20,
          20
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          1,
          18,
          9
        ],
        "normals": [
          21,
          21,
          21
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          6,
          20,
          18
        ],
        "normals": [
          22,
          22,
          22
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          9,
          18,
          20
        ],
        "normals": [
          23,
          23,
          23
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          5,
          21,
          22
        ],
        "normals": [
          24,
          24,
          24
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          0,
          12,
          21
        ],
        "normals": [
          25,
          25,
          25
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          3,
          22,
          12
        ],
        "normals": [
          26,
          26,
          26
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          21,
          12,
          22
        ],
        "normals": [
          27,
          27,
          27
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          0,
          21,
          23
        ],
        "normals": [
          28,
          28,
          28
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          5,
          13,
          21
        ],
        "normals": [
          29,
          29,
          29
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          4,
          23,
          13
        ],
        "normals": [
          30,
          30,
          30
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          21,
          13,
          23
        ],
        "normals": [
          31,
          31,
          31
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          6,
          24,
          20
        ],
        "normals": [
          32,
          32,
          32
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          3,
          11,
          24
        ],
        "normals": [
          33,
          33,
          33
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          2,
          20,
          11
        ],
        "normals": [
          34,
          34,
          34
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          24,
          11,
          20
        ],
        "normals": [
          35,
          35,
          35
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          3,
          24,
          22
        ],
        "normals": [
          36,
          36,
          36
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          6,
          14,
          24
        ],
        "normals": [
          37,
          37,
          37
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          5,
          22,
          14
        ],
        "normals": [
          38,
          38,
          38
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          24,
          14,
          22
        ],
        "normals": [
          39,
          39,
          39
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          4,
          17,
          23
        ],
        "normals": [
          40,
          40,
          40
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          7,
          25,
          17
        ],
        "normals": [
          41,
          41,
          41
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          0,
          23,
          25
        ],
        "normals": [
          42,
          42,
          42
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          17,
          25,
          23
        ],
        "normals": [
          43,
          43,
          43
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          1,
          8,
          19
        ],
        "normals": [
          44,
          44,
          44
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          0,
          25,
          8
        ],
        "normals": [
          45,
          45,
          45
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          7,
          19,
          25
        ],
        "normals": [
          46,
          46,
          46
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          8,
          25,
          19
        ],
        "normals": [
          47,
          47,
          47
        ]
      }
    }
  ],
  "vertices": [
    [
      -0.625,
      0.625,
      -0.625
    ],
    [
      -0.625,
      0.625,
      0.8125
    ],
    [
      0.625,
      0.8125,
      0.625
    ],
    [
      0.8125,
      0.625,
      -0.625
    ],
    [
      -0.625,
      -0.8125,
      -0.625
    ],
    [
      0.625,
      -0.625,
      -0.8125
    ],
    [
      0.625,
      -0.625,
      0.625
    ],
    [
      -0.8125,
      -0.625,
      0.625
    ],
    [
      -0.75,
      0.75,
      0.25
    ],
    [
      0.0,
      0.75,
      0.75
    ],
    [
      0.0,
      1.0,
      0.0
    ],
    [
      0.75,
      0.75,
      0.0
    ],
    [
      0.25,
      0.75,
      -0.75
    ],
    [
      0.0,
      -0.75,
      -0.75
    ],
    [
      0.75,
      -0.75,
      -0.25
    ],
    [
      0.0,
      -1.0,
      0.0
    ],
    [
      -0.25,
      -0.75,
      0.75
    ],
    [
      -0.75,
      -0.75,
      0.0
    ],
    [
      0.0,
      0.0,
      1.0
    ],
    [
      -0.75,
      0.0,
      0.75
    ],
    [
      0.75,
      0.25,
      0.75
    ],
    [
      0.0,
      0.0,
      -1.0
    ],
    [
      0.75,
      0.0,
      -0.75
    ],
    [
      -0.75,
      -0.25,
      -0.75
    ],
    [
      1.0,
      0.0,
      0.0
    ],
    [
      -1.0,
      0.0,
      0.0
    ]
  ],
  "normals": [
    [
      -0.25,
      0.625,
      -0.125
    ],
    [
      -0.0625,
      0.359375,
      0.09375
    ],
    [
      -0.015625,
      0.46875,
      0.15625
    ],
    [
      -0.125,
      0.5625,
      0.1875
    ],
    [
      0.15625,
      0.46875,
      -0.015625
    ],
    [
      0.09375,
      0.359375,
      -0.0625
    ],
    [
      -0.125,
      0.625,
      -0.25
    ],
    [
      0.1875,
      0.5625,
      -0.125
    ],
    [
      0.015625,
      -0.46875,
      -0.15625
    ],
    [
      0.0625,
      -0.359375,
      -0.09375
    ],
    [
      0.25,
      -0.625,
      0.125
    ],
    [
      0.125,
      -0.5625,
      -0.1875
    ],
    [
      0.125,
      -0.625,
      0.25
    ],
    [
      -0.09375,
      -0.359375,
      0.0625
    ],
    [
      -0.15625,
      -0.46875,
      0.015625
    ],
    [
      -0.1875,
      -0.5625,
      0.125
    ],
    [
      -0.09375,
      -0.0625,
      0.359375
    ],
    [
      0.125,
      -0.25,
      0.625
    ],
    [
      -0.15625,
      -0.015625,
      0.46875
    ],
    [
      -0.1875,
      -0.125,
      0.5625
    ],
    [
      0.0625,
      0.09375,
      0.359375
    ],
    [
      0.015625,
      0.15625,
      0.46875
    ],
    [
      0.25,
      -0.125,
      0.625
    ],
    [
      0.125,
      0.1875,
      0.5625
    ],
    [
      0.15625,
      0.015625,
      -0.46875
    ],
    [
      -0.125,
      0.25,
      -0.625
    ],
    [
      0.09375,
      0.0625,
      -0.359375
    ],
    [
      0.1875,
      0.125,
      -0.5625
    ],
    [
      -0.25,
      0.125,
      -0.625
    ],
    [
      -0.015625,
      -0.15625,
      -0.46875
    ],
    [
      -0.0625,
      -0.09375,
      -0.359375
    ],
    [
      -0.125,
      -0.1875,
      -0.5625
    ],
    [
      0.625,
      -0.125,
      0.25
    ],
    [
      0.46875,
      0.15625,
      0.015625
    ],
    [
      0.359375,
      0.09375,
      0.0625
    ],
    [
      0.5625,
      0.1875,
      0.125
    ],
    [
      0.46875,
      -0.015625,
      -0.15625
    ],
    [
      0.625,
      -0.25,
      0.125
    ],
    [
      0.359375,
      -0.0625,
      -0.09375
    ],
    [
      0.5625,
      -0.125,
      -0.1875
    ],
    [
      -0.359375,
      -0.09375,
      -0.0625
    ],
    [
      -0.46875,
      -0.15625,
      -0.015625
    ],
    [
      -0.625,
      0.125,
      -0.25
    ],
    [
      -0.5625,
      -0.1875,
      -0.125
    ],
    [
      -0.359375,
      0.0625,
      0.09375
    ],
    [
      -0.625,
      0.25,
      -0.125
    ],
    [
      -0.46875,
      0.015625,
      0.15625
    ],
    [
      -0.5625,
      0.125,
      0.1875
    ]
  ]
}
