src/snapshots/tests__triple_torus_after_1_iteration_of_laplacian_smoothing.snap
---
source: src/mesh_smoothing.rs
expression: "&relaxed_geometry"
---
{
  "faces": [
    {
      "Triangle": {
        "vertices": [
          4,
          3,
          0
        ],
        "normals": [
          0,
          0,
          0
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          0,
          9,
          1
        ],
        "normals": [
          1,
          1,
          1
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          2,
          1,
          3
        ],
        "normals": [
          2,
          2,
          2
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          7,
          5,
          9
        ],
        "normals": [
          3,
          3,
          3
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          5,
          6,
          9
        ],
        "normals": [
          4,
          4,
          4
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          6,
          7,
          18
        ],
        "normals": [
          5,
          5,
          5
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          15,
          4,
          0
        ],
        "normals": [
          6,
          6,
          6
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          3,
          15,
          9
        ],
        "normals": [
          7,
          7,
          7
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          10,
          1,
          11
        ],
        "normals": [
          8,
          8,
          8
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          11,
          18,
          12
        ],
        "normals": [
          9,
          9,
          9
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          13,
          12,
          1
        ],
        "normals": [
          10,
          10,
          10
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          14,
          2,
          15
        ],
        "normals": [
          11,
          11,
          11
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          1,
          14,
          15
        ],
        "normals": [
          12,
          12,
          12
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          8,
          0,
          2
        ],
        "normals": [
          13,
          13,
          13
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          8,
          14,
          6
        ],
        "normals": [
          14,
          14,
          14
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          16,
          13,
          10
        ],
        "normals": [
          15,
          15,
          15
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          12,
          16,
          1
        ],
        "normals": [
          16,
          16,
          16
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          17,
          8,
          7
        ],
        "normals": [
          17,
          17,
          17
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          18,
          9,
          8
        ],
        "normals": [
          18,
          18,
          18
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          14,
          17,
          6
        ],
        "normals": [
          19,
          19,
          19
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          17,
          11,
          16
        ],
        "normals": [
          20,
          20,
          20
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          18,
          17,
          16
        ],
        "normals": [
          21,
          21,
          21
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          14,
          10,
          17
        ],
        "normals": [
          22,
          22,
          22
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          3,
          9,
          0
        ],
        "normals": [
          23,
          23,
          23
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          0,
          1,
          2
        ],
        "normals": [
          24,
          24,
          24
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          2,
          3,
          4
        ],
        "normals": [
          25,
          25,
          25
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          7,
          9,
          18
        ],
        "normals": [
          26,
          26,
          26
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          6,
          1,
          9
        ],
        "normals": [
          27,
          27,
          27
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          6,
          18,
          1
        ],
        "normals": [
          28,
          28,
          28
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          15,
          0,
          8
        ],
        "normals": [
          29,
          29,
          29
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          15,
          8,
          9
        ],
        "normals": [
          30,
          30,
          30
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          1,
          18,
          11
        ],
        "normals": [
          31,
          31,
          31
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          11,
          12,
          13
        ],
        "normals": [
          32,
          32,
          32
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          13,
          1,
          10
        ],
        "normals": [
          33,
          33,
          33
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          2,
          4,
          15
        ],
        "normals": [
          34,
          34,
          34
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          1,
          15,
          3
        ],
        "normals": [
          35,
          35,
          35
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          8,
          2,
          14
        ],
        "normals": [
          36,
          36,
          36
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          8,
          6,
          5
        ],
        "normals": [
          37,
          37,
          37
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          16,
          10,
          14
        ],
        "normals": [
          38,
          38,
          38
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          16,
          14,
          1
        ],
        "normals": [
          39,
          39,
          39
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          8,
          5,
          7
        ],
        "normals": [
          40,
          40,
          40
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          18,
          8,
          17
        ],
        "normals": [
          41,
          41,
          41
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          17,
          7,
          6
        ],
        "normals": [
          42,
          42,
          42
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          11,
          13,
          16
        ],
        "normals": [
          43,
          43,
          43
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          18,
          16,
          12
        ],
        "normals": [
          44,
          44,
          44
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          10,
          11,
          17
        ],
        "normals": [
          45,
          45,
          45
        ]
      }
    }
  ],
  "vertices": [
    [
      15.005896,
      -0.096932136,
      0.035714287
    ],
    [
      15.032319,
      1.3814715,
      0.07692308
    ],
    [
      14.85898,
      0.023603572,
      -0.071428575
    ],
    [
      15.036084,
      0.0625,
      0.125
    ],
    [
      14.7667465,
      -0.40400624,
      0.0625
    ],
    [
      15.922697,
      0.79014397,
      0.0625
    ],
    [
      15.74002,
      1.2527441,
      -0.03125
    ],
    [
      16.038675,
      1.1591878,
      0.0
    ],
    [
      15.546143,
      0.94594526,
      0.025
    ],
    [
      15.369417,
      0.61406684,
      0.083333336
    ],
    [
      14.954895,
      2.2789257,
      -0.125
    ],
    [
      15.005896,
      2.5789828,
      0.035714287
    ],
    [
      15.1,
      2.5052557,
      0.1
    ],
    [
      14.670095,
      2.5570505,
      0.1
    ],
    [
      15.010317,
      1.2410252,
      -0.125
    ],
    [
      15.082797,
      0.19028437,
      0.0625
    ],
    [
      15.082798,
      2.3152037,
      0.0625
    ],
    [
      15.3785515,
      1.8498192,
      -0.03125
    ],
    [
      15.381446,
      1.8054839,
      0.0
    ]
  ],
  "normals": [
    [
      -0.0,
      0.0,
      0.42524105
    ],
    [
      0.0,
      -0.0,
      1.0747586
    ],
    [
      0.0,
      0.0,
      1.0747575
    ],
    [
      0.0,
      0.0,
      0.4252399
    ],
    [
      0.0,
      0.0,
      0.42524105
    ],
    [
      0.0,
      0.0,
      0.42524052
    ],
    [
      -0.36826876,
      0.6378608,
      -0.2126205
    ],
    [
      0.9307687,
      -1.6121385,
      -0.53737986
    ],
    [
      -0.0,
      0.0,
      0.42524064
    ],
    [
      0.0,
      -0.0,
      1.0747588
    ],
    [
      0.0,
      0.0,
      1.0747579
    ],
    [
      1.6506,
      -0.040595055,
      -0.4030337
    ],
    [
      -1.6506,
      0.040595055,
      -0.5905341
    ],
    [
      -0.36826876,
      -0.6378608,
      -0.42524055
    ],
    [
      0.8604562,
      1.165595,
      -0.53737926
    ],
    [
      0.7365384,
      0.0,
      -0.21261996
    ],
    [
      -1.8615384,
      -0.0,
      -0.53737897
    ],
    [
      -1.5802882,
      -0.0,
      -0.22809559
    ],
    [
      1.8615382,
      0.0,
      -0.8060672
    ],
    [
      0.71983194,
      -1.165595,
      -0.7171425
    ],
    [
      -0.7901439,
      -1.2061901,
      -0.2686903
    ],
    [
      0.7901439,
      1.2061901,
      -0.6436888
    ],
    [
      -0.71983194,
      1.165595,
      -0.86404794
    ],
    [
      0.0,
      0.0,
      1.0747588
    ],
    [
      0.0,
      0.0,
      0.42524105
    ],
    [
      0.0,
      0.0,
      0.42523944
    ],
    [
      -0.0,
      0.0,
      1.0747578
    ],
    [
      0.0,
      0.0,
      1.0747586
    ],
    [
      0.0,
      -0.0,
      1.0747595
    ],
    [
      -0.7901437,
      1.2061901,
      -0.26869023
    ],
    [
      0.7901437,
      -1.2061901,
      -0.6436887
    ],
    [
      0.0,
      0.0,
      1.0747594
    ],
    [
      0.0,
      0.0,
      0.425241
    ],
    [
      0.0,
      0.0,
      0.42523992
    ],
    [
      0.7365375,
      0.0,
      -0.21261972
    ],
    [
      -1.8615375,
      -0.0,
      -0.5373787
    ],
    [
      -0.8604562,
      -1.165595,
      -1.1250007
    ],
    [
      0.36826873,
      0.6378608,
      -0.42524043
    ],
    [
      1.5099759,
      0.040595055,
      -0.36243904
    ],
    [
      -1.5099759,
      -0.040595055,
      -0.5499396
    ],
    [
      -0.7365383,
      0.0,
      -0.10631044
    ],
    [
      1.5802882,
      0.0,
      -0.6842828
    ],
    [
      0.36826953,
      -0.6378608,
      -0.4252402
    ],
    [
      -0.3682689,
      -0.6378608,
      -0.21262044
    ],
    [
      0.9307689,
      1.6121385,
      -0.53738
    ],
    [
      -0.36826944,
      0.6378608,
      -0.42524108
    ]
  ]
}
